--- a/grupo03/src/main/resources/templates/user/home.html
+++ b/grupo03/src/main/resources/templates/user/home.html
@@ -9,7 +9,7 @@
 
 <body>
 	
-	<h1>Pagina del Usuario</h1><h2>-- [[${user.nombre}]] [[${user.apellido}]] --</h2>
+	<h1>Pagina del Usuario</h1><h2>-- [[${user.apellido}]] --</h2>
 	<a href="/logout">Salir</a>
 	
 
