--- a/grupo03/src/main/resources/templates/login.html
+++ b/grupo03/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 					
 						<div th:if="${param.error}" class="alert alert-danger">Usuario o Password Invalido</div>
 						
-						<div th:if="${param.logout}" class="alert alert-success">Logueo Exitoso</div>
+					<!--<div th:if="${param.logout}" class="alert alert-success">Logueo Exitoso</div>-->
 						
 						<div class="card-body">						
 						<form action="/login" method="post">
