--- a/grupo03/src/main/resources/templates/admin/home.html
+++ b/grupo03/src/main/resources/templates/admin/home.html
@@ -10,6 +10,13 @@
 <body>
 	
 	<h1>Pagina del Administrador</h1><h2>-- [[${admin.nombre}]] [[${admin.apellido}]] --</h2>
+	
+	<br/><br/>
+	
+	<a href="/admin/listar">Ir a Alertas</a>
+	
+	<br/><br/>
+	
 	<a href="/logout">Salir</a>
 	
 
