--- a/grupo03/src/main/resources/templates/user/home.html
+++ b/grupo03/src/main/resources/templates/user/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="utf-8" />
@@ -10,9 +10,7 @@
 <body>
 	
 	<h1>Pagina del Usuario</h1><h2>-- 	[[${user.nombre}]] [[${user.apellido}]] --</h2>
-	<a href="/logout">Salir</a>
 	
-
-
+	<a href="/logout">Salir</a>
 </body>
 </html>
