--- a/grupo03/src/main/resources/templates/productos.html
+++ b/grupo03/src/main/resources/templates/productos.html
@@ -30,9 +30,9 @@
     
       <th scope="row"></th>
       
-      <td ></td>
-      <td></td>
-      <td></td>
+      <td th:text="${alerta.producto}"></td>
+      <td th:text="${alerta.producto}"></td>
+      <td th:text="${alerta.producto}"></td>
     </tr>
    
   </tbody>
