--- a/grupo03/src/main/resources/templates/productos.html
+++ b/grupo03/src/main/resources/templates/productos.html
@@ -21,18 +21,19 @@
       <th scope="col">Nombre</th>
       <th scope="col">Descripcion</th>
       <th scope="col">Precio</th>
-      <th scope="col">Cantidad</th>
+     
     </tr>
   </thead>
   
   <tbody>
-    <tr th:each="productos : ${productos}">
+    <tr th:each="producto : ${productos}">
     
       <th scope="row"></th>
+       <td th:text="${producto.id}"></td>
+      <td th:text="${producto.nombre}"></td>
+      <td th:text="${producto.descripcion}"></td>
+      <td th:text="${producto.precio}"></td>
       
-      <td th:text="${alerta.producto}"></td>
-      <td th:text="${alerta.producto}"></td>
-      <td th:text="${alerta.producto}"></td>
     </tr>
    
   </tbody>
