--- a/grupo03/src/main/resources/templates/user/home.html
+++ b/grupo03/src/main/resources/templates/user/home.html
@@ -11,6 +11,12 @@
 	
 	<h1>Pagina del Usuario</h1><h2>-- 	[[${user.nombre}]] [[${user.apellido}]] --</h2>
 	
+	<br/><br/>
+	
+	<a href="/user/productos">Ir a Productos</a>
+	
+	<br/><br/>
+	
 	<a href="/logout">Salir</a>
 </body>
 </html>
