--- a/grupo03/src/main/resources/templates/user/productos.html
+++ b/grupo03/src/main/resources/templates/user/productos.html
@@ -28,12 +28,15 @@
 					<td th:text="${prod.descripcion}"></td>
 					<td th:text="${prod.activo}"></td>
 					<td th:text="${prod.precio}"></td>
+					<td>
+						<a th:href="@{/eliminar/}+${prod.id}" class="btn btn-danger">Eliminar</a>						
+					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 
-	<a href="/user">Salir</a>
+
 </body>
 
 </html>
