--- a/grupo03/src/main/resources/templates/admin/home.html
+++ b/grupo03/src/main/resources/templates/admin/home.html
@@ -13,6 +13,10 @@
 	
 	<br/><br/>
 	
+	<a href="/admin/productos">Ir a Productos</a>
+	
+	<br/><br/>
+	
 	<a href="/admin/listar">Ir a Alertas</a>
 	
 	<br/><br/>
