--- a/grupo03/src/main/resources/templates/admin/productos.html
+++ b/grupo03/src/main/resources/templates/admin/productos.html
@@ -28,6 +28,9 @@
 					<td th:text="${prod.descripcion}"></td>
 					<td th:text="${prod.activo}"></td>
 					<td th:text="${prod.precio}"></td>
+					<td>
+						<a th:href="@{/eliminar/}+${prod.id}" class="btn btn-danger">Eliminar</a>						
+					</td>
 				</tr>
 			</tbody>
 		</table>
