--- a/grupo03/src/main/resources/templates/admin/stock.html
+++ b/grupo03/src/main/resources/templates/admin/stock.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Lista Stock</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
 
@@ -20,11 +22,11 @@
 			</tr>
 			</thead>
 			<tbody>
-				<tr th:each="s:${stock}">
-					<td th:text="${s.id}"></td>
-					<td th:text="${s.cantidaActual}"></td>
-					<td th:text="${s.cantidadCritca}"></td>
-					<td th:text="${s.producto.nombre}"></td>				
+				<tr th:each="st:${stock}">
+					<td th:text="${st.id}"></td>
+					<td th:text="${st.cantidadActual}"></td>
+					<td th:text="${st.cantidadCritica}"></td>
+					<td th:text="${st.producto.nombre}"></td>				
 				</tr>
 			</tbody>
 		</table>
